client/src/css/Telesession.css
@import 'media.css';
@import 'colors.css';
@import 'panel.css';

.Telesession {
  > .left-column {
    display: flex;
    flex-direction: column;
    flex: 1 1 auto;

    @media (--lt-md) {
      order: 2;
      margin-top: 10px;
    }
  }

  > .right-column {
    display: flex;
    flex-direction: column;
    flex: 0 1 1px;

    @media (--gt-sm) {
      margin-left: 10px;
      max-width: 50%;
    }
  }
}

.TelesessionPanels {
  display: flex;
  flex-direction: row;
  flex: 0 0 auto;
  width: 100%;
  margin-bottom: 10px;

  .telesession-panel {
    margin-right: 10px;
  }
}

.telesession-panel {
  display: flex;
  flex-direction: column;
  flex: 1 0 auto;
  justify-content: center;
  align-items: center;
  position: relative;
  padding: 0;
  width: 48vh;
  height: 48vh;

  @media (--lt-md) {
    flex: 1 0 auto;
  }

  .video-container {
    position: relative;
    width: 100%;
    height: 100%;

    .OT_widget-container {
      border-radius: $panel-border-radius;

      video {
        border-radius: $panel-border-radius;
      }
    }

    .publisher-container {
      section {
        height: 100%;
        width: 100%;
      }

      &.full {
        position: absolute;
        width: 100%;
        height: 100%;
      }

      &.thumb {
        position: absolute;
        width: 12vw;
        height: 9vw;
        right: 10px;
        bottom: 10px;
        z-index: 5;
        border-radius: 5px;
        overflow: hidden;
      }
    }

    .subscriber-container {
      &.full {
        position: absolute;
        width: 100%;
        height: 100%;
      }

      section {
        width: 100%;
        height: 100%;
      }
    }
  }
}

.charts-container {
  overflow: scroll;
  display: flex;
  flex-direction: column;

  .graph-panel {
    position: relative;
    flex: 1 1 1px;

    .VisavDropdown {
      position: absolute;
      top: 21px;
      right: 3%;
      width: 200px;
    }

    &:not(:last-child) {
      margin-bottom: 10px;
    }
  }
}

.chart-container {
  position: relative;
  flex: 1 1 1px;
  height: calc(100% - 40px);
}

